src/snapshots/lis_lang__parser__tests__expr_func_call_prop_access.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 11,
            line: 0,
            col: 11,
        },
        node: PropAccess {
            obj: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 6,
                    line: 0,
                    col: 6,
                },
                node: FuncCall {
                    callee: Span {
                        range: Pos {
                            offset: 0,
                            line: 0,
                            col: 0,
                        }..Pos {
                            offset: 4,
                            line: 0,
                            col: 4,
                        },
                        node: Var {
                            name: "func",
                        },
                    },
                    paren_l: Token {
                        sigil: ParenL,
                        range: Pos {
                            offset: 4,
                            line: 0,
                            col: 4,
                        }..Pos {
                            offset: 5,
                            line: 0,
                            col: 5,
                        },
                    },
                    args: [],
                    paren_r: Token {
                        sigil: ParenR,
                        range: Pos {
                            offset: 5,
                            line: 0,
                            col: 5,
                        }..Pos {
                            offset: 6,
                            line: 0,
                            col: 6,
                        },
                    },
                },
            },
            dot_tok: Token {
                sigil: Dot,
                range: Pos {
                    offset: 6,
                    line: 0,
                    col: 6,
                }..Pos {
                    offset: 7,
                    line: 0,
                    col: 7,
                },
            },
            prop: "prop",
        },
    },
)
