src/snapshots/lis_lang__parser__tests__expr_func_call_prop_assign_bin_expr.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 19,
            line: 0,
            col: 19,
        },
        node: Assign {
            place: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 11,
                    line: 0,
                    col: 11,
                },
                node: PropAccess {
                    obj: Span {
                        range: Pos {
                            offset: 0,
                            line: 0,
                            col: 0,
                        }..Pos {
                            offset: 6,
                            line: 0,
                            col: 6,
                        },
                        node: FuncCall {
                            callee: Span {
                                range: Pos {
                                    offset: 0,
                                    line: 0,
                                    col: 0,
                                }..Pos {
                                    offset: 4,
                                    line: 0,
                                    col: 4,
                                },
                                node: Var {
                                    name: "func",
                                },
                            },
                            paren_l: Token {
                                sigil: ParenL,
                                range: Pos {
                                    offset: 4,
                                    line: 0,
                                    col: 4,
                                }..Pos {
                                    offset: 5,
                                    line: 0,
                                    col: 5,
                                },
                            },
                            args: [],
                            paren_r: Token {
                                sigil: ParenR,
                                range: Pos {
                                    offset: 5,
                                    line: 0,
                                    col: 5,
                                }..Pos {
                                    offset: 6,
                                    line: 0,
                                    col: 6,
                                },
                            },
                        },
                    },
                    dot_tok: Token {
                        sigil: Dot,
                        range: Pos {
                            offset: 6,
                            line: 0,
                            col: 6,
                        }..Pos {
                            offset: 7,
                            line: 0,
                            col: 7,
                        },
                    },
                    prop: "prop",
                },
            },
            eq_tok: Token {
                sigil: Eq,
                range: Pos {
                    offset: 12,
                    line: 0,
                    col: 12,
                }..Pos {
                    offset: 13,
                    line: 0,
                    col: 13,
                },
            },
            expr: Span {
                range: Pos {
                    offset: 14,
                    line: 0,
                    col: 14,
                }..Pos {
                    offset: 19,
                    line: 0,
                    col: 19,
                },
                node: BinOp {
                    left: Span {
                        range: Pos {
                            offset: 14,
                            line: 0,
                            col: 14,
                        }..Pos {
                            offset: 15,
                            line: 0,
                            col: 15,
                        },
                        node: Num {
                            val: 1.0,
                        },
                    },
                    op: Add,
                    op_tok: Token {
                        sigil: Plus,
                        range: Pos {
                            offset: 16,
                            line: 0,
                            col: 16,
                        }..Pos {
                            offset: 17,
                            line: 0,
                            col: 17,
                        },
                    },
                    right: Span {
                        range: Pos {
                            offset: 18,
                            line: 0,
                            col: 18,
                        }..Pos {
                            offset: 19,
                            line: 0,
                            col: 19,
                        },
                        node: Num {
                            val: 2.0,
                        },
                    },
                },
            },
        },
    },
)
