src/snapshots/lis_lang__parser__tests__stmt_if_else.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 39,
            line: 0,
            col: 39,
        },
        node: If {
            keyword: Token {
                sigil: Keyword(
                    If,
                ),
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 2,
                    line: 0,
                    col: 2,
                },
            },
            condition: Span {
                range: Pos {
                    offset: 3,
                    line: 0,
                    col: 3,
                }..Pos {
                    offset: 4,
                    line: 0,
                    col: 4,
                },
                node: Var {
                    name: "x",
                },
            },
            then_keyword: Token {
                sigil: Keyword(
                    Then,
                ),
                range: Pos {
                    offset: 5,
                    line: 0,
                    col: 5,
                }..Pos {
                    offset: 9,
                    line: 0,
                    col: 9,
                },
            },
            cons_branch: Span {
                range: Pos {
                    offset: 10,
                    line: 0,
                    col: 10,
                }..Pos {
                    offset: 21,
                    line: 0,
                    col: 21,
                },
                node: Block {
                    brace_l: Token {
                        sigil: CurlyL,
                        range: Pos {
                            offset: 10,
                            line: 0,
                            col: 10,
                        }..Pos {
                            offset: 11,
                            line: 0,
                            col: 11,
                        },
                    },
                    stmts: [
                        Span {
                            range: Pos {
                                offset: 12,
                                line: 0,
                                col: 12,
                            }..Pos {
                                offset: 19,
                                line: 0,
                                col: 19,
                            },
                            node: Print {
                                keyword: Token {
                                    sigil: Keyword(
                                        Print,
                                    ),
                                    range: Pos {
                                        offset: 12,
                                        line: 0,
                                        col: 12,
                                    }..Pos {
                                        offset: 17,
                                        line: 0,
                                        col: 17,
                                    },
                                },
                                expr: Span {
                                    range: Pos {
                                        offset: 18,
                                        line: 0,
                                        col: 18,
                                    }..Pos {
                                        offset: 19,
                                        line: 0,
                                        col: 19,
                                    },
                                    node: Num {
                                        val: 1.0,
                                    },
                                },
                            },
                        },
                    ],
                    brace_r: Token {
                        sigil: CurlyR,
                        range: Pos {
                            offset: 20,
                            line: 0,
                            col: 20,
                        }..Pos {
                            offset: 21,
                            line: 0,
                            col: 21,
                        },
                    },
                },
            },
            else_keyword: Some(
                Token {
                    sigil: Keyword(
                        Else,
                    ),
                    range: Pos {
                        offset: 22,
                        line: 0,
                        col: 22,
                    }..Pos {
                        offset: 26,
                        line: 0,
                        col: 26,
                    },
                },
            ),
            alt_branch: Some(
                Span {
                    range: Pos {
                        offset: 27,
                        line: 0,
                        col: 27,
                    }..Pos {
                        offset: 39,
                        line: 0,
                        col: 39,
                    },
                    node: Block {
                        brace_l: Token {
                            sigil: CurlyL,
                            range: Pos {
                                offset: 27,
                                line: 0,
                                col: 27,
                            }..Pos {
                                offset: 28,
                                line: 0,
                                col: 28,
                            },
                        },
                        stmts: [
                            Span {
                                range: Pos {
                                    offset: 29,
                                    line: 0,
                                    col: 29,
                                }..Pos {
                                    offset: 36,
                                    line: 0,
                                    col: 36,
                                },
                                node: Print {
                                    keyword: Token {
                                        sigil: Keyword(
                                            Print,
                                        ),
                                        range: Pos {
                                            offset: 29,
                                            line: 0,
                                            col: 29,
                                        }..Pos {
                                            offset: 34,
                                            line: 0,
                                            col: 34,
                                        },
                                    },
                                    expr: Span {
                                        range: Pos {
                                            offset: 35,
                                            line: 0,
                                            col: 35,
                                        }..Pos {
                                            offset: 36,
                                            line: 0,
                                            col: 36,
                                        },
                                        node: Num {
                                            val: 0.0,
                                        },
                                    },
                                },
                            },
                        ],
                        brace_r: Token {
                            sigil: CurlyR,
                            range: Pos {
                                offset: 38,
                                line: 0,
                                col: 38,
                            }..Pos {
                                offset: 39,
                                line: 0,
                                col: 39,
                            },
                        },
                    },
                },
            ),
        },
    },
)
